# Urban-Sensing-Engine

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md  asyncapi.json  compose.swarm.yaml  compose.yaml  main.cpp  openapi.json  pom.xml  urban_sensing_engine.cpp
.github/workflows/: publish.yml
gui/: index.html  package-lock.json  package.json
gui/src/: co_comparison.ts  gauge.ts  home.ts  main.ts  offcanvas.ts  style.css  temperature.ts  wind.ts
include/: api.hpp  building.h  dashboard.h  geometry_parameter.hpp  message.h  mongo_client.h  occupancy.h  point_of_interest.h  question.h  road.h  rule.h  sensor_network.h  urban_sensing_engine.h  urban_sensing_engine_db.h  urban_sensing_engine_listener.h  use_defs.h  use_executor.h  user.h  uspe.hpp  uspe_db.hpp  uspe_server.hpp  vehicle.h  vehicle_type.h
items/: es.json  es_19821.json  es_19824.json  es_19827.json  es_19828.json  loc0.json  loc1.json  ps_A40005133.json  rc0.json  u0.json  u1.json  vs_24B3023-Martella.json
items/environmental_sensors/: es_19819.json  es_19820.json  es_19821.json  es_19822.json  es_19823.json  es_19824.json  es_19825.json  es_19826.json  es_19827.json  es_19828.json
items/pedestrian_sensors/: ps_A40005133.json
items/roads/: create_items.py
items/users/: u0.json  u2.json  u3.json
items/vehicular_sensors/: vs_24B3023.json
mobile/: settings.gradle
mobile/app/: build.gradle  google-services.json
mobile/app/src/main/: AndroidManifest.xml
mobile/app/src/main/java/it/cnr/istc/ctemt/uspe/: MainActivity.java  MessagingService.java
mobile/app/src/main/java/it/cnr/uspe/: MainActivity.java  MessagingService.java
modules/dashboard/: .env.local
rules/: README.md  bus.clp  commercial_building.clp  env_sensor.clp  env_sensor_high.clp  government_building.clp  graph.py  maintainance.rddl  maintenance.rddl  matera.clp  matera.rddl  occupation.json  ped_sensor.clp  pm10.clp  pm10_high.clp  pm2_5.clp  pm2_5_high.clp  pollutants.json  proj.py  purchases.rddl  residence.clp  rock_church.clp  rules.clp  rules.rddl  temp_sens5.json  urban_intelligence_02_03.rddl  urban_intelligence_02_06.rddl  urban_intelligence_domain.rddl  urban_intelligence_init.rddl  uspe.clp  veh_sensor.clp
rules/matera/: POI_1.json  POI_10.json  POI_11.json  POI_12.json  POI_13.json  POI_14.json  POI_15.json  POI_16.json  POI_17.json  POI_18.json  POI_19.json  POI_2.json  POI_20.json  POI_21.json  POI_22.json  POI_23.json  POI_24.json  POI_25.json  POI_3.json  POI_4.json  POI_5.json  POI_6.json  POI_7.json  POI_8.json  POI_9.json  Predictions_all.json  Predictions_foreigners.json  Predictions_intraregion.json  Predictions_italians.json  Predictions_outregion.json  Train_all.json  Train_foreigners.json  Train_intraregion.json  Train_italians.json  Train_outregion.json  arbusti.geojson  tiles.json  tiles_csv2json.py
rules/matera/layers/: Chiese_Rupestri.geojson  Fermate_TPL.geojson  Fontane.geojson  Istruzione_Formazione.geojson  Percorso_murge_sassi_bici.geojson  app.py
rules/matera/layers/templates/: Attrezzature_Ludiche_PdV.geojson  Chiese.geojson  POI.geojson  Percorso_Murgia_matera_piedi.geojson  Tappeto_erboso.geojson  index.html
src/: README.md  UrbanSensingEngineConfig.cmake.in  config.py  dashboard.cpp  geometry_parameter.cpp  import_matera_data.py  import_matera_roads.py  main.cpp  mongo_client.cpp  rule.cpp  urban_sensing_engine.cpp  urban_sensing_engine_db.cpp  use_executor.cpp  uspe.cpp  uspe_db.cpp  uspe_server.cpp
src/main/java/it/cnr/istc/pst/: App.java
src/main/java/it/cnr/istc/pst/use/: App.java  Condition.java  Effect.java  Rule.java  UrbanSensingEngine.java
src/main/resources/: config.properties
static/: main.css  main.js  reasonerD3.js
templates/: index.html
tests/: CMakeLists.txt  POI.geojson  config.py  env_data.py  import_matera_data.py  matera_POI.geojson  store_env_data.py  test_db.cpp  test_use.cpp
types/: Building.json  Bus.json  Church.json  CityArea.json  CommercialBuilding.json  EnvironmentalSensor.json  GovernmentBuilding.json  Location.json  POI.json  PedestrianSensor.json  Residence.json  RoadSegment.json  RockChurch.json  Sensor.json  User.json  Vehicle.json  VehicularSensor.json
